dataset1235/2025-2/1955397009/users/1253623235/executions/1107611404_2383239197.log
== RUN (2025-08-23 13:30:17)
-- CODE: 
from math import*
A = float(input("Angulo y"))


X = radians(cos(A))


print(round(X, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Angulo y0.02
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Angulo y0.02
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Angulo y0.02
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Angulo y-0.01
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Angulo y0.0
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Angulo y-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 13:35:43)
-- CODE: 
from math import*
A = float(input("Angulo y"))


X = cos(A)


print(radians(X))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Angulo y0.016490918636408832
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Angulo y0.017414865242399814
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Angulo y0.017431866100349695
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Angulo y-0.012013869542381723
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Angulo y0.0003861847495574005
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Angulo y-0.0025394546517233715
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 00:05:29)
-- CODE: 
from math import*
dist1 = float(input("Distancia a: "))
dist2 = float(input("Distancia b: "))
ang = float(input("Angulo entre a e b: "))
X = cos(ang)



print(cos(degrees(X)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Distancia a: Distancia b: Angulo entre a e b: -0.7138625195473556
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Distancia a: Distancia b: Angulo entre a e b: -0.590928798141846
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Distancia a: Distancia b: Angulo entre a e b: -0.8247757014808408
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.29287846007310786
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Distancia a: Distancia b: Angulo entre a e b: -0.7271348707506621
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Distancia a: Distancia b: Angulo entre a e b: -0.3973500270926724
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 13:24:31)
-- CODE: 
from math import*
X = float(input("A distancia  a entre o observador e a primeira arvore: "))
Y = float(input("A distancia b entre o observador e a segunda arvore: "))
Z = float(input("O angulo y entre a e b: "))

T = math.sqrt(radians(cos(Z)))


print(round(T, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    T = math.sqrt(radians(cos(Z)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    T = math.sqrt(radians(cos(Z)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    T = math.sqrt(radians(cos(Z)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    T = math.sqrt(radians(cos(Z)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    T = math.sqrt(radians(cos(Z)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    T = math.sqrt(radians(cos(Z)))
        ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 13:33:38)
-- CODE: 
from math import*
A = float(input("Angulo y"))


X = radians(cos(A))


print(X)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Angulo y0.016490918636408832
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Angulo y0.017414865242399814
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Angulo y0.017431866100349695
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Angulo y-0.012013869542381723
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Angulo y0.0003861847495574005
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Angulo y-0.0025394546517233715
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 00:03:38)
-- CODE: 
from math import*
dist1 = float(input("Distancia a: "))
dist2 = float(input("Distancia b: "))
ang = float(input("Angulo entre a e b: "))
X = cos(ang)



print(cos(radians(ang)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.9293904770216437
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.4241994227453901
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.6547408137173397
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.9770455744352636
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.21473532716706334
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.5000000000000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 23:58:18)
-- CODE: 
from math import*
dist1 = float(input("Distancia a: "))
dist2 = float(input("Distancia b: "))
ang = float(input("Angulo entre a e b: "))
X = cos(degrees(ang))



print(round(X ,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Distancia a: Distancia b: Angulo entre a e b: -1.0
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.41
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Distancia a: Distancia b: Angulo entre a e b: -0.07
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.52
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Distancia a: Distancia b: Angulo entre a e b: -0.7
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 00:00:46)
-- CODE: 
from math import*
dist1 = float(input("Distancia a: "))
dist2 = float(input("Distancia b: "))
ang = float(input("Angulo entre a e b: "))
X = cos(ang)



print(X)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Distancia a: Distancia b: Angulo entre a e b: -0.9456695318260206
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Distancia a: Distancia b: Angulo entre a e b: -0.477098792703571
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.39430721903739135
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.9647326178866098
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Distancia a: Distancia b: Angulo entre a e b: -0.5899363314099478
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Distancia a: Distancia b: Angulo entre a e b: -0.9524129804151563
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 13:23:16)
-- CODE: 
from math import*
X = float(input("A distancia  a entre o observador e a primeira arvore: "))
Y = float(input("A distancia b entre o observador e a segunda arvore: "))
Z = float(input("O angulo y entre a e b: "))

T = sqrt(radians(cos(Z)))


print(round(T, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    T = sqrt(radians(cos(Z)))
        ^^^^^^^^^^^^^^^^^^^^^
ValueError: math domain error
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    T = sqrt(radians(cos(Z)))
        ^^^^^^^^^^^^^^^^^^^^^
ValueError: math domain error
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
A distancia  a entre o observador e a primeira arvore: A distancia b entre o observador e a segunda arvore: O angulo y entre a e b: 0.08
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
A distancia  a entre o observador e a primeira arvore: A distancia b entre o observador e a segunda arvore: O angulo y entre a e b: 0.13
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    T = sqrt(radians(cos(Z)))
        ^^^^^^^^^^^^^^^^^^^^^
ValueError: math domain error
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    T = sqrt(radians(cos(Z)))
        ^^^^^^^^^^^^^^^^^^^^^
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 17:11:02)
-- CODE: 
from math import*

X = float(input("Distancia a: "))
Y = float(input("Distancia b: "))
Z = float(input("Angulo entre a e b: "))

s = X**2
d = Y**2
h = 2*X*Y*cos(radians(Z))



dist = sqrt(s + d - h)


print(round(dist, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 00:02:04)
-- CODE: 
from math import*
dist1 = float(input("Distancia a: "))
dist2 = float(input("Distancia b: "))
ang = float(input("Angulo entre a e b: "))
X = cos(ang)



print(cos(radians(X)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.9998637948044107
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.9999653311955553
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.9999763194119953
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.9998582482583189
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.9999469932485526
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.9998618453996658
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 23:08:16)
-- CODE: 
from math import*

X = float(input("Distancia a: "))
Y = float(input("Distancia b: "))
Z = float(input("Angulo entre a e b: "))

s = X**2
d = Y**2
h = 2*X*Y*cos(radians(Z))



dist = sqrt(s + d - h)


print(round(dist, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 23:59:43)
-- CODE: 
from math import*
dist1 = float(input("Distancia a: "))
dist2 = float(input("Distancia b: "))
ang = float(input("Angulo entre a e b: "))
X = cos(degrees(ang))



print(X)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Distancia a: Distancia b: Angulo entre a e b: -0.9952519936024631
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.4088420633084655
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Distancia a: Distancia b: Angulo entre a e b: -0.0733811800883281
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.5222291091320223
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Distancia a: Distancia b: Angulo entre a e b: -0.6975058518066596
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Distancia a: Distancia b: Angulo entre a e b: 0.6641741461866275
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 13:32:09)
-- CODE: 
from math import*
A = float(input("Angulo y"))


X = radians(cos(A))


print(X)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Angulo y0.016490918636408832
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Angulo y0.017414865242399814
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Angulo y0.017431866100349695
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Angulo y-0.012013869542381723
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Angulo y0.0003861847495574005
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Angulo y-0.0025394546517233715
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 13:34:13)
-- CODE: 
from math import*
A = float(input("Angulo y"))


X = cos(A)


print(X)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Angulo y0.9448600381598606
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Angulo y0.9977982791785807
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Angulo y0.9987723565872102
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Angulo y-0.6883440203992384
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Angulo y0.022126756261955736
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Angulo y-0.14550003380861354
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 20:52:45)
-- CODE: 
from math import*
d1 = float(input(""))
d2 = float(input(""))
ag = float(input(""))

c = sqrt(d1**2 + d2**2 - 2*d1*d2*cos(radians(ag)))

print(round(c, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 13:29:36)
-- CODE: 
from math import*
A = float(input("Angulo y"))


X = cos(A)


print(round(X, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Angulo y0.94
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Angulo y1.0
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Angulo y1.0
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Angulo y-0.69
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Angulo y0.02
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Angulo y-0.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 13:35:26)
-- CODE: 
from math import*
A = float(input("Angulo y"))


X = cos(A)


print(radians(X)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    print(radians(X)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    print(radians(X)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    print(radians(X)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    print(radians(X)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    print(radians(X)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    print(radians(X)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 23:04:11)
-- CODE: 
from math import*

X = float(input("Distancia a: "))
Y = float(input("Distancia b: "))
Z = float(input("Angulo entre a e b: ")))

s = X**2
d = Y**2
h = 2*X*cos(Z)



dist = sqrt(s + d - h)


print(round(dist, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    Z = float(input("Angulo entre a e b: ")))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    Z = float(input("Angulo entre a e b: ")))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    Z = float(input("Angulo entre a e b: ")))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    Z = float(input("Angulo entre a e b: ")))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    Z = float(input("Angulo entre a e b: ")))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    Z = float(input("Angulo entre a e b: ")))
                                            ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
